--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -15,6 +15,7 @@
 html {
   scrollbar-color: rgb(69, 74, 77) rgb(32, 35, 36);
   overflow-y: scroll !important;
+  overflow-x: hidden;
 }
 #root {
   max-width: 100vw;
